4XF-28 Implement DI for console client